Bug 422459 - kwin_wayland asserts in KWin::AbstractEglTexture::updateTexture
Summary: kwin_wayland asserts in KWin::AbstractEglTexture::updateTexture
Status: RESOLVED FIXED
Alias: None
Product: kwin
Classification: Plasma
Component: wayland-generic (other bugs)
Version First Reported In: git master
Platform: Other Linux
: NOR normal
Target Milestone: ---
Assignee: KWin default assignee
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2020-06-04 19:13 UTC by Nicolas Fella
Modified: 2020-07-06 16:34 UTC (History)
1 user (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 5.20
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Nicolas Fella 2020-06-04 19:13:15 UTC
Not 100% sure how to properly reproduce it, but it happend a few times with nothing but Falkon open.

KDE stuff from master, Qt from 5.15 branch
Comment 1 Nicolas Fella 2020-06-04 19:13:30 UTC
#0  0x00007f09ea5b3355 in raise () at /usr/lib/libc.so.6
#1  0x00007f09ea59c853 in abort () at /usr/lib/libc.so.6
#2  0x00007f09eac70c51 in qt_message_fatal (message=<synthetic pointer>..., context=...) at global/qlogging.cpp:1914
#3  QMessageLogger::fatal(char const*, ...) const (this=this@entry=0x7ffd9de282b8, msg=msg@entry=0x7f09eaf6aee8 "ASSERT: \"%s\" in file %s, line %d") at global/qlogging.cpp:893
#4  0x00007f09eac7004a in qt_assert(char const*, char const*, int) (assertion=<optimized out>, file=<optimized out>, line=<optimized out>) at ../../include/QtCore/../../src/corelib/global/qlogging.h:90
#5  0x00007f09e55e73f3 in KWin::AbstractEglTexture::updateTexture(KWin::WindowPixmap*) (this=0x56395bc862c0, pixmap=0x56395bf19210) at /home/nico/kde/src/kwin/platformsupport/scenes/opengl/abstract_egl_backend.cpp:421
#6  0x00007f09e4412e76 in KWin::SceneOpenGLTexture::updateFromPixmap(KWin::WindowPixmap*) (this=0x56395bf192c0, pixmap=0x56395bf19210) at /home/nico/kde/src/kwin/platformsupport/scenes/opengl/texture.cpp:64
#7  0x00007f09e43fc679 in KWin::OpenGLWindowPixmap::bind() (this=0x56395bf19210) at /home/nico/kde/src/kwin/plugins/scenes/opengl/scene_opengl.cpp:1582
#8  0x00007f09e43f9e33 in KWin::OpenGLWindow::bindTexture() (this=0x56395bee0050) at /home/nico/kde/src/kwin/plugins/scenes/opengl/scene_opengl.cpp:1095
#9  0x00007f09e43fa604 in KWin::OpenGLWindow::beginRenderWindow(int, QRegion const&, KWin::WindowPaintData&) (this=0x56395bee0050, mask=10, region=..., data=...) at /home/nico/kde/src/kwin/plugins/scenes/opengl/scene_opengl.cpp:1156
#10 0x00007f09e43fb952 in KWin::OpenGLWindow::performPaint(int, QRegion const&, KWin::WindowPaintData const&) (this=0x56395bee0050, mask=10, region=..., _data=...) at /home/nico/kde/src/kwin/plugins/scenes/opengl/scene_opengl.cpp:1407
#11 0x00007f09e43f9ca5 in KWin::SceneOpenGL2::performPaintWindow(KWin::EffectWindowImpl*, int, QRegion const&, KWin::WindowPaintData&) (this=0x56395acf7ee0, w=0x56395bf059b0, mask=10, region=..., data=...)
    at /home/nico/kde/src/kwin/plugins/scenes/opengl/scene_opengl.cpp:1064
#12 0x00007f09e43f9b12 in KWin::SceneOpenGL2::finalDrawWindow(KWin::EffectWindowImpl*, int, QRegion const&, KWin::WindowPaintData&) (this=0x56395acf7ee0, w=0x56395bf059b0, mask=10, region=..., data=...)
    at /home/nico/kde/src/kwin/plugins/scenes/opengl/scene_opengl.cpp:1046
#13 0x00007f09ee28f067 in KWin::EffectsHandlerImpl::drawWindow(KWin::EffectWindow*, int, QRegion const&, KWin::WindowPaintData&) (this=0x56395b8619a0, w=0x56395bf059b0, mask=10, region=..., data=...) at /home/nico/kde/src/kwin/effects.cpp:483
#14 0x00007f09edf00d60 in KWin::BlurEffect::drawWindow(KWin::EffectWindow*, int, QRegion const&, KWin::WindowPaintData&) (this=0x56395b7d9410, w=0x56395bf059b0, mask=10, region=..., data=...)
    at /home/nico/kde/src/kwin/effects/blur/blur.cpp:614
#15 0x00007f09ee28f016 in KWin::EffectsHandlerImpl::drawWindow(KWin::EffectWindow*, int, QRegion const&, KWin::WindowPaintData&) (this=0x56395b8619a0, w=0x56395bf059b0, mask=10, region=..., data=...) at /home/nico/kde/src/kwin/effects.cpp:480
#16 0x00007f09edea17fc in KWin::Effect::drawWindow(KWin::EffectWindow*, int, QRegion const&, KWin::WindowPaintData&) (this=0x56395b893c50, w=0x56395bf059b0, mask=10, region=..., data=...)
    at /home/nico/kde/src/kwin/libkwineffects/kwineffects.cpp:622
#17 0x00007f09ee28f016 in KWin::EffectsHandlerImpl::drawWindow(KWin::EffectWindow*, int, QRegion const&, KWin::WindowPaintData&) (this=0x56395b8619a0, w=0x56395bf059b0, mask=10, region=..., data=...) at /home/nico/kde/src/kwin/effects.cpp:480
#18 0x00007f09ee35d7cc in KWin::Scene::finalPaintWindow(KWin::EffectWindowImpl*, int, QRegion const&, KWin::WindowPaintData&) (this=0x56395acf7ee0, w=0x56395bf059b0, mask=10, region=..., data=...) at /home/nico/kde/src/kwin/scene.cpp:628
#19 0x00007f09ee28ed4d in KWin::EffectsHandlerImpl::paintWindow(KWin::EffectWindow*, int, QRegion const&, KWin::WindowPaintData&) (this=0x56395b8619a0, w=0x56395bf059b0, mask=10, region=..., data=...)
    at /home/nico/kde/src/kwin/effects.cpp:446
#20 0x00007f09edea16b7 in KWin::Effect::paintWindow(KWin::EffectWindow*, int, QRegion, KWin::WindowPaintData&) (this=0x56395b7d9410, w=0x56395bf059b0, mask=10, region=..., data=...)
    at /home/nico/kde/src/kwin/libkwineffects/kwineffects.cpp:592
#21 0x00007f09ee28ed06 in KWin::EffectsHandlerImpl::paintWindow(KWin::EffectWindow*, int, QRegion const&, KWin::WindowPaintData&) (this=0x56395b8619a0, w=0x56395bf059b0, mask=10, region=..., data=...)
    at /home/nico/kde/src/kwin/effects.cpp:443
#22 0x00007f09ede9303d in KWin::AnimationEffect::paintWindow(KWin::EffectWindow*, int, QRegion, KWin::WindowPaintData&) (this=0x56395b893c50, w=0x56395bf059b0, mask=10, region=..., data=...)
    at /home/nico/kde/src/kwin/libkwineffects/kwinanimationeffect.cpp:731
#23 0x00007f09ee28ed06 in KWin::EffectsHandlerImpl::paintWindow(KWin::EffectWindow*, int, QRegion const&, KWin::WindowPaintData&) (this=0x56395b8619a0, w=0x56395bf059b0, mask=10, region=..., data=...)
    at /home/nico/kde/src/kwin/effects.cpp:443
#24 0x00007f09ee35c38c in KWin::Scene::paintWindow(KWin::Scene::Window*, int, QRegion const&, KWin::WindowQuadList const&) (this=0x56395acf7ee0, w=0x56395bee0050, mask=10, _region=..., quads=...) at /home/nico/kde/src/kwin/scene.cpp:500
#25 0x00007f09ee35b57c in KWin::Scene::paintSimpleScreen(int, QRegion const&) (this=0x56395acf7ee0, orig_mask=8, region=...) at /home/nico/kde/src/kwin/scene.cpp:375
#26 0x00007f09e43f980d in KWin::SceneOpenGL2::paintSimpleScreen(int, QRegion const&) (this=0x56395acf7ee0, mask=8, region=...) at /home/nico/kde/src/kwin/plugins/scenes/opengl/scene_opengl.cpp:1011
#27 0x00007f09ee35a48b in KWin::Scene::finalPaintScreen(int, QRegion const&, KWin::ScreenPaintData&) (this=0x56395acf7ee0, mask=8, region=..., data=...) at /home/nico/kde/src/kwin/scene.cpp:200
#28 0x00007f09ee28ea8a in KWin::EffectsHandlerImpl::paintScreen(int, QRegion const&, KWin::ScreenPaintData&) (this=0x56395b8619a0, mask=8, region=..., data=...) at /home/nico/kde/src/kwin/effects.cpp:403
#29 0x00007f09edea15e6 in KWin::Effect::paintScreen(int, QRegion const&, KWin::ScreenPaintData&) (this=0x56395b7d9410, mask=8, region=..., data=...) at /home/nico/kde/src/kwin/libkwineffects/kwineffects.cpp:577
#30 0x00007f09ee28ea56 in KWin::EffectsHandlerImpl::paintScreen(int, QRegion const&, KWin::ScreenPaintData&) (this=0x56395b8619a0, mask=8, region=..., data=...) at /home/nico/kde/src/kwin/effects.cpp:400
#31 0x00007f09edea15e6 in KWin::Effect::paintScreen(int, QRegion const&, KWin::ScreenPaintData&) (this=0x56395b893c50, mask=8, region=..., data=...) at /home/nico/kde/src/kwin/libkwineffects/kwineffects.cpp:577
#32 0x00007f09ee28ea56 in KWin::EffectsHandlerImpl::paintScreen(int, QRegion const&, KWin::ScreenPaintData&) (this=0x56395b8619a0, mask=8, region=..., data=...) at /home/nico/kde/src/kwin/effects.cpp:400
#33 0x00007f09ee35a15e in KWin::Scene::paintScreen(int*, QRegion const&, QRegion const&, QRegion*, QRegion*, QMatrix4x4 const&, QRect const&, double)
    (this=0x56395acf7ee0, mask=0x7ffd9de293b0, damage=..., repaint=..., updateRegion=0x7ffd9de293d0, validRegion=0x7ffd9de293d8, projection=..., outputGeometry=..., screenScale=1) at /home/nico/kde/src/kwin/scene.cpp:150
#34 0x00007f09e43f7707 in KWin::SceneOpenGL::paint(QRegion const&, QList<KWin::Toplevel*> const&) (this=0x56395acf7ee0, damage=..., toplevels=...) at /home/nico/kde/src/kwin/plugins/scenes/opengl/scene_opengl.cpp:653
#35 0x00007f09ee2345ff in KWin::Compositor::performCompositing() (this=0x56395ad093c0) at /home/nico/kde/src/kwin/composite.cpp:701
#36 0x00007f09ee233ef7 in KWin::Compositor::bufferSwapComplete() (this=0x56395ad093c0) at /home/nico/kde/src/kwin/composite.cpp:605
#37 0x00007f09e55b2b25 in KWin::DrmBackend::pageFlipHandler(int, unsigned int, unsigned int, unsigned int, void*) (fd=47, frame=32088, sec=1329, usec=304857, data=0x56395acfc1f0)
    at /home/nico/kde/src/kwin/plugins/platforms/drm/drm_backend.cpp:248
#38 0x00007f09e55484a5 in drmHandleEvent () at /usr/lib/libdrm.so.2
#39 0x00007f09e55b2b9a in operator()() const (__closure=0x56395acfc4c0) at /home/nico/kde/src/kwin/plugins/platforms/drm/drm_backend.cpp:279
--Type <RET> for more, q to quit, c to continue without paging--fn
#40 0x00007f09e55b75b9 in QtPrivate::FunctorCall<QtPrivate::IndexesList<>, QtPrivate::List<>, void, KWin::DrmBackend::openDrm()::<lambda()> >::call(struct {...} &, void **) (f=..., arg=0x7ffd9de29c20)
    at /home/nico/kde/usr/include/QtCore/qobjectdefs_impl.h:146
#41 0x00007f09e55b726d in QtPrivate::Functor<KWin::DrmBackend::openDrm()::<lambda()>, 0>::call<QtPrivate::List<>, void>(struct {...} &, void *, void **) (f=..., arg=0x7ffd9de29c20) at /home/nico/kde/usr/include/QtCore/qobjectdefs_impl.h:256
#42 0x00007f09e55b698a in QtPrivate::QFunctorSlotObject<KWin::DrmBackend::openDrm()::<lambda()>, 0, QtPrivate::List<>, void>::impl(int, QtPrivate::QSlotObjectBase *, QObject *, void **, bool *)
    (which=1, this_=0x56395acfc4b0, r=0x56395abbe4a0, a=0x7ffd9de29c20, ret=0x0) at /home/nico/kde/usr/include/QtCore/qobjectdefs_impl.h:443
#43 0x00007f09eaec0c36 in QtPrivate::QSlotObjectBase::call(QObject*, void**) (a=0x7ffd9de29c20, r=0x56395abbe4a0, this=0x56395acfc4b0) at ../../include/QtCore/../../src/corelib/kernel/qobjectdefs_impl.h:398
#44 doActivate<false>(QObject*, int, void**) (sender=0x56395acfc4d0, signal_index=3, argv=argv@entry=0x7ffd9de29c20) at kernel/qobject.cpp:3886
#45 0x00007f09eaeb9f90 in QMetaObject::activate(QObject*, QMetaObject const*, int, void**)
    (sender=sender@entry=0x56395acfc4d0, m=m@entry=0x7f09eb157a80 <QSocketNotifier::staticMetaObject>, local_signal_index=local_signal_index@entry=0, argv=argv@entry=0x7ffd9de29c20) at kernel/qobject.cpp:3946
#46 0x00007f09eaec406f in QSocketNotifier::activated(QSocketDescriptor, QSocketNotifier::Type, QSocketNotifier::QPrivateSignal) (this=this@entry=0x56395acfc4d0, _t1=..., _t2=<optimized out>, _t3=...) at .moc/moc_qsocketnotifier.cpp:178
#47 0x00007f09eaec486b in QSocketNotifier::event(QEvent*) (this=0x56395acfc4d0, e=0x7ffd9de29d30) at kernel/qsocketnotifier.cpp:302
#48 0x00007f09eb94d0ef in QApplicationPrivate::notify_helper(QObject*, QEvent*) (this=<optimized out>, receiver=0x56395acfc4d0, e=0x7ffd9de29d30) at kernel/qapplication.cpp:3671
#49 0x00007f09eae8a79a in QCoreApplication::notifyInternal2(QObject*, QEvent*) (receiver=0x56395acfc4d0, event=0x7ffd9de29d30) at ../../include/QtCore/5.15.0/QtCore/private/../../../../../src/corelib/thread/qthread_p.h:325
#50 0x00007f09eaedef1b in QEventDispatcherUNIXPrivate::activateSocketNotifiers() (this=0x56395ab8d270) at kernel/qeventdispatcher_unix.cpp:304
#51 0x00007f09eaedf37b in QEventDispatcherUNIX::processEvents(QFlags<QEventLoop::ProcessEventsFlag>) (this=<optimized out>, flags=...) at kernel/qeventdispatcher_unix.cpp:511
#52 0x00007f09e697227d in QUnixEventDispatcherQPA::processEvents(QFlags<QEventLoop::ProcessEventsFlag>) (this=<optimized out>, flags=...) at qunixeventdispatcher.cpp:63
#53 0x00007f09eae8915b in QEventLoop::exec(QFlags<QEventLoop::ProcessEventsFlag>) (this=this@entry=0x7ffd9de29ec0, flags=..., flags@entry=...) at ../../include/QtCore/../../src/corelib/global/qflags.h:141
#54 0x00007f09eae913c0 in QCoreApplication::exec() () at ../../include/QtCore/../../src/corelib/global/qflags.h:121
#55 0x0000563959ac533f in main(int, char**) (argc=4, argv=0x7ffd9de2a2e8) at /home/nico/kde/src/kwin/main_wayland.cpp:704
Comment 2 Nicolas Fella 2020-06-04 21:51:40 UTC
I can reliably make it crash by first opening Telegram and then Gwenview