scene.cpp
@@ -406,9 +406,9 @@ void Scene::addToplevel(Toplevel *c)
         // TODO(vlad): Is there a more efficient way to manage window pixmap trees?
         connect(monitor, &SubSurfaceMonitor::subSurfaceAdded, w, &Window::discardPixmap);
         connect(monitor, &SubSurfaceMonitor::subSurfaceRemoved, w, &Window::discardPixmap);
-        connect(monitor, &SubSurfaceMonitor::subSurfaceResized, w, &Window::discardPixmap);
         connect(monitor, &SubSurfaceMonitor::subSurfaceMapped, w, &Window::discardPixmap);
         connect(monitor, &SubSurfaceMonitor::subSurfaceUnmapped, w, &Window::discardPixmap);
+        connect(monitor, &SubSurfaceMonitor::subSurfaceBufferSizeChanged, w, &Window::discardPixmap);
 
         connect(monitor, &SubSurfaceMonitor::subSurfaceAdded, w, &Window::discardQuads);
         connect(monitor, &SubSurfaceMonitor::subSurfaceRemoved, w, &Window::discardQuads);
@@ -418,6 +418,7 @@ void Scene::addToplevel(Toplevel *c)
         connect(monitor, &SubSurfaceMonitor::subSurfaceUnmapped, w, &Window::discardQuads);
         connect(monitor, &SubSurfaceMonitor::subSurfaceSurfaceToBufferMatrixChanged, w, &Window::discardQuads);
 
+        connect(c->surface(), &KWaylandServer::SurfaceInterface::bufferSizeChanged, w, &Window::discardPixmap);
         connect(c->surface(), &KWaylandServer::SurfaceInterface::surfaceToBufferMatrixChanged, w, &Window::discardQuads);
     }
 
