subsurfacemonitor.cpp
@@ -48,6 +48,8 @@ void SubSurfaceMonitor::registerSubSurface(SubSurfaceInterface *subSurface)
             this, &SubSurfaceMonitor::subSurfaceUnmapped);
     connect(surface, &SurfaceInterface::surfaceToBufferMatrixChanged,
             this, &SubSurfaceMonitor::subSurfaceSurfaceToBufferMatrixChanged);
+    connect(surface, &SurfaceInterface::bufferSizeChanged,
+            this, &SubSurfaceMonitor::subSurfaceBufferSizeChanged);
 
     registerSurface(surface);
 }
@@ -68,6 +70,8 @@ void SubSurfaceMonitor::unregisterSubSurface(SubSurfaceInterface *subSurface)
                this, &SubSurfaceMonitor::subSurfaceUnmapped);
     disconnect(surface, &SurfaceInterface::surfaceToBufferMatrixChanged,
                this, &SubSurfaceMonitor::subSurfaceSurfaceToBufferMatrixChanged);
+    disconnect(surface, &SurfaceInterface::bufferSizeChanged,
+               this, &SubSurfaceMonitor::subSurfaceBufferSizeChanged);
 
     unregisterSurface(surface);
 }
